--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# **Project Proposal**\n",
-    "## Title: Predicting Existance of Heart Disease\n",
+    "## Title: Predicting Existence of Heart Disease\n",
     "Group 8\n",
     "\n",
     "Team members: Mireia Fortuno Ledesma, Steve He, Karry Jiang, Ashine Zhang\n",
