--- a/final_group_project.ipynb
+++ b/final_group_project.ipynb
@@ -1225,10 +1225,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.6621622</td></tr>\n",
+       "\t<tr><td>kap     </td><td>binary</td><td>0.3091860</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.6621622\\\\\n",
+       "\t kap      & binary & 0.3091860\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| accuracy | binary | 0.6621622 |\n",
+       "| kap      | binary | 0.3091860 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator .estimate\n",
+       "1 accuracy binary     0.6621622\n",
+       "2 kap      binary     0.3091860"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "knn_best <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 6) %>%\n",
+    "       set_engine(\"kknn\") %>%\n",
+    "       set_mode(\"classification\") \n",
+    "\n",
+    "knn_results_best <- workflow() %>%\n",
+    "       add_recipe(recipe) %>%\n",
+    "       add_model(knn_best) %>%\n",
+    "       fit(data_train)\n",
+    "\n",
+    "test_predictions<- predict(knn_results_best , data_test) %>%\n",
+    "       bind_cols(data_test) \n",
+    "\n",
+    "prediction_accuracy<- test_predictions %>%\n",
+    "         metrics(truth = target, estimate = .pred_class)\n",
+    "\n",
+    "prediction_accuracy"
+   ]
   },
   {
    "cell_type": "code",
