added part of discussion, references, fixed some typos

--- a/final_group_project.ipynb
+++ b/final_group_project.ipynb
@@ -147,12 +147,12 @@
     "* Since the data doesn't have columns' names, we explicitly write the names from the information we find in https://archive.ics.uci.edu/ml/datasets/Heart+Disease.\n",
     "* We remove rows which have null values by filtering. In this case null values are represented as \"?\", and we know that ca and thal have null values.\n",
     "* We change the data type of some of the variables since in the webpage mentioned above we can see that some variables should be categorical, as they only have a few possible values.\n",
-    "* We create a new variable from num called target. Instead of having different values of diagnosed (num= 1, 2, 3 or 4) we just consider if the person has been diagnosed with a heart disease or not."
+    "* We create a new variable from num called target. Instead of having different values of diagnosed (num = 1, 2, 3 or 4) we just consider if the person has been diagnosed with a heart disease or not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This table contains the same data as the previous table, excluding the ? values, changes whole number observations to factors, and add a new column of target based on observations in column num. It also now addsd human interpretable column names."
+    "This table contains the same data as the previous table, excluding the ? values, changes whole number observations to factors, and add a new column of target based on observations in column num. It also now added human interpretable column names."
    ]
   },
   {
@@ -420,7 +420,7 @@
     "\n",
     "For the next part, we want to explore our dataset, but only the training dataset. Therefore we first will split the data into 2 sub-datasets. We will use 75% of our data for training and the variable we want to classify is `target`. \n",
     "\n",
-    "From the textbook and literature, we know thattypically, the training set size is between 50% and 95% of the data. We want to trade off between training an accurate model (by using a larger training set) and getting an accurate evaluation of the performance (by using a larger test set). Therefore, we use 75% of the data for training, and 25% for testing since its a value in the middle of the typically used sizes."
+    "From the textbook and literature, we know that typically, the training set size is between 50% and 95% of the data. We want to trade off between training an accurate model (by using a larger training set) and getting an accurate evaluation of the performance (by using a larger test set). Therefore, we use 75% of the data for training, and 25% for testing since its a value in the middle of the typically used sizes."
    ]
   },
   {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1196,8 +1196,8 @@
     "       filter(.metric == \"accuracy\")\n",
     "\n",
     "## get the row corresponding to the highest achieved accuracy throghout the folds\n",
-    "max_accurcy <- accuracies %>% filter(mean == max(mean))\n",
-    "max_accurcy\n",
+    "max_accuracy <- accuracies %>% filter(mean == max(mean))\n",
+    "max_accuracy\n",
     "\n",
     "## create a plot to see how the accuracy relates to the number of neighbors throughut the folds\n",
     "cross_val_plot <- ggplot(accuracies, aes(x = neighbors, y = mean))+\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
    ],
    "source": [
     "## get the best k into a variable (k=6)\n",
-    "k_best <- max_accurcy %>%\n",
+    "k_best <- max_accuracy %>%\n",
     "       pull(neighbors)\n",
     "\n",
     "## build a new model specification using the k we have obtained as best\n",
@@ -1325,20 +1325,22 @@
     "\n",
     "* **discuss what future questions could this lead to?**\n",
     "\n",
+    "Our project's accuracy is not as high as we would have liked, so future analyses can be done on whether there are any categories that can predict heart disease with a higher accuracy. Our project was also done on the Cleveland data set, however there is also data for Hungary, Switzerland, and the VA Long Beach. Further analysis can be done to see if the same 3 categories of `age`, `thalach`, and `oldpeak` have a smilar accuracy in predicting whether someone has heart disease or not in data collected in other regions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **References**\n",
     "\n",
     "**(need to fill)**\n",
     "\n",
     "* **At least 2 citations of literature relevant to the project (format is your choice, just be consistent across the references)**.\n",
-    "* The source of our data can be found in this link https://archive.ics.uci.edu/ml/datasets/Heart+Disease. It is part of the UCI Machine Learning Repository. \n"
+    "* The source of our data can be found in this link https://archive.ics.uci.edu/ml/datasets/Heart+Disease. It is part of the UCI Machine Learning Repository. \n",
+    "* Textbook: Timbers, T., Campbell, T., & Lee, Melissa. (2022). Data Science: A First Introduction. Chapman and Hall/CRC. https://datasciencebook.ca/\n",
+    "* Durage, P. M. (2018) Predicting a Person Diagnose a Heart Disease based on Cleveland Database. RPubs by RStudio. https://rpubs.com/praneetha/predicting_diagnosis_of_a_heart_disease-phase1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
