--- a/final_group_project.ipynb
+++ b/final_group_project.ipynb
@@ -58,80 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘broom’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dials’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘infer’ was built under R version 4.0.3”\n",
-      "Warning message:\n",
-      "“package ‘modeldata’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘parsnip’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘recipes’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tune’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘workflows’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘yardstick’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘cowplot’ was built under R version 4.0.3”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Run this cell before continuing. \n",
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
     "library(RColorBrewer)\n",
-    "library(cowplot)\n",
     "\n",
     "## set a seed for reproducibility\n",
     "set.seed(1111)"
@@ -152,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1090,8 +1025,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each of the graph correspondes to a histogram of age, thalach, chol, trestbps, and oldpeak, observations are seperated based on Diagonsed or Healthy.\n",
-    "\n",
     "As we can see, some of the variables have a bigger difference in shape and center of the distribution comparing the Diagnosed vs Healthy obsertations. This is the case for `age`, `thalach` and `oldpeak`.\n",
     "\n",
     "For `age`, we can see that for Diagnosed group the distribution has a higher concentration of values in the higher numbers while the Healthy is more distributed. For `thalach`, the opposite happens. And for `oldpeak`, theres more observations in the lower part compared to Diagnosed.\n",
@@ -1105,14 +1038,90 @@
    "source": [
     "### Data Analysis\n",
     "\n",
-    "Now we perform perform the actual Data Analysis. For this, we would like to use the classification model. Based on the data, the column num ranges from 0-4, these numbers represent the severity of all coronary artery blockages, the more blockage, the less blood flow to the heart. 0 in this case indicating < 50% diameter narrowing, and 1 indicating > 50% diameter narrowing. In this data set, the cutoff for a diagnose of heart disease is at 50% diameter narrowing, so any number greater than 1 indicates the individual have a heart disease to some extent. Therefore we decide to classify the condition of the observation into healthy (num==0), and diagnosed (num==1, 2, 3, 4), which makes a classification model the best fit as we are classifying an observation as healthy or diagnosed. After analyzing the data visualization above, we decide to use `age`, `oldpeak`, and `thalach` as  the three predicting variables used to determine the best k value. We firstly perform a cross-validation in R using the `vfold_cv` function and perform 5-fold cross-validation. We then perform K-nearest neighbor model specification and insert `tune` for `neighbors` argument. After performing workflow analysis, `accuracy` is being filtered and we create a line plot  with `neighbors` on the x-axis and the `mean` on the y-axis. \n"
+    "Now we perform perform the actual Data Analysis. For this, we would like to use the classification model. Based on the data, the column num ranges from 0-4, these numbers represent the severity of all coronary artery blockages, the more blockage, the less blood flow to the heart. 0 in this case indicating < 50% diameter narrowing, and 1 to 4 indicating > 50% diameter narrowing. In this data set, the cutoff for a diagnose of heart disease is at 50% diameter narrowing, so any number greater than 1 indicates the individual have a heart disease to some extent. Therefore we decide to classify the condition of the observation into healthy (num==0), and diagnosed (num==1, 2, 3, 4), which makes a classification model the best fit as we are classifying an observation as healthy or diagnosed. After analyzing the data visualization above, we decide to use `age`, `oldpeak`, and `thalach` as  the three predicting variables used to determine the best k value. We firstly perform a cross-validation in R using the `vfold_cv` function and perform 5-fold cross-validation. We then perform K-nearest neighbor model specification and insert `tune` for `neighbors` argument. After performing workflow analysis, `accuracy` is being filtered and we create a line plot  with `neighbors` on the x-axis and the `mean` on the y-axis. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 10 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>neighbors</th><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1</td><td>accuracy</td><td>binary</td><td>0.6498990</td><td>5</td><td>0.02306340</td><td>Model01</td></tr>\n",
+       "\t<tr><td> 3</td><td>accuracy</td><td>binary</td><td>0.6768687</td><td>5</td><td>0.01642183</td><td>Model02</td></tr>\n",
+       "\t<tr><td> 4</td><td>accuracy</td><td>binary</td><td>0.6723232</td><td>5</td><td>0.01818631</td><td>Model03</td></tr>\n",
+       "\t<tr><td> 6</td><td>accuracy</td><td>binary</td><td>0.7128283</td><td>5</td><td>0.02106951</td><td>Model04</td></tr>\n",
+       "\t<tr><td> 7</td><td>accuracy</td><td>binary</td><td>0.6854545</td><td>5</td><td>0.04124825</td><td>Model05</td></tr>\n",
+       "\t<tr><td> 9</td><td>accuracy</td><td>binary</td><td>0.7127273</td><td>5</td><td>0.02359154</td><td>Model06</td></tr>\n",
+       "\t<tr><td>11</td><td>accuracy</td><td>binary</td><td>0.6991919</td><td>5</td><td>0.03058647</td><td>Model07</td></tr>\n",
+       "\t<tr><td>12</td><td>accuracy</td><td>binary</td><td>0.6991919</td><td>5</td><td>0.03058647</td><td>Model08</td></tr>\n",
+       "\t<tr><td>13</td><td>accuracy</td><td>binary</td><td>0.7038384</td><td>5</td><td>0.02844407</td><td>Model09</td></tr>\n",
+       "\t<tr><td>14</td><td>accuracy</td><td>binary</td><td>0.7038384</td><td>5</td><td>0.02844407</td><td>Model10</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 10 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <int> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t  1 & accuracy & binary & 0.6498990 & 5 & 0.02306340 & Model01\\\\\n",
+       "\t  3 & accuracy & binary & 0.6768687 & 5 & 0.01642183 & Model02\\\\\n",
+       "\t  4 & accuracy & binary & 0.6723232 & 5 & 0.01818631 & Model03\\\\\n",
+       "\t  6 & accuracy & binary & 0.7128283 & 5 & 0.02106951 & Model04\\\\\n",
+       "\t  7 & accuracy & binary & 0.6854545 & 5 & 0.04124825 & Model05\\\\\n",
+       "\t  9 & accuracy & binary & 0.7127273 & 5 & 0.02359154 & Model06\\\\\n",
+       "\t 11 & accuracy & binary & 0.6991919 & 5 & 0.03058647 & Model07\\\\\n",
+       "\t 12 & accuracy & binary & 0.6991919 & 5 & 0.03058647 & Model08\\\\\n",
+       "\t 13 & accuracy & binary & 0.7038384 & 5 & 0.02844407 & Model09\\\\\n",
+       "\t 14 & accuracy & binary & 0.7038384 & 5 & 0.02844407 & Model10\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 10 × 7\n",
+       "\n",
+       "| neighbors &lt;int&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "|  1 | accuracy | binary | 0.6498990 | 5 | 0.02306340 | Model01 |\n",
+       "|  3 | accuracy | binary | 0.6768687 | 5 | 0.01642183 | Model02 |\n",
+       "|  4 | accuracy | binary | 0.6723232 | 5 | 0.01818631 | Model03 |\n",
+       "|  6 | accuracy | binary | 0.7128283 | 5 | 0.02106951 | Model04 |\n",
+       "|  7 | accuracy | binary | 0.6854545 | 5 | 0.04124825 | Model05 |\n",
+       "|  9 | accuracy | binary | 0.7127273 | 5 | 0.02359154 | Model06 |\n",
+       "| 11 | accuracy | binary | 0.6991919 | 5 | 0.03058647 | Model07 |\n",
+       "| 12 | accuracy | binary | 0.6991919 | 5 | 0.03058647 | Model08 |\n",
+       "| 13 | accuracy | binary | 0.7038384 | 5 | 0.02844407 | Model09 |\n",
+       "| 14 | accuracy | binary | 0.7038384 | 5 | 0.02844407 | Model10 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   neighbors .metric  .estimator mean      n std_err    .config\n",
+       "1   1        accuracy binary     0.6498990 5 0.02306340 Model01\n",
+       "2   3        accuracy binary     0.6768687 5 0.01642183 Model02\n",
+       "3   4        accuracy binary     0.6723232 5 0.01818631 Model03\n",
+       "4   6        accuracy binary     0.7128283 5 0.02106951 Model04\n",
+       "5   7        accuracy binary     0.6854545 5 0.04124825 Model05\n",
+       "6   9        accuracy binary     0.7127273 5 0.02359154 Model06\n",
+       "7  11        accuracy binary     0.6991919 5 0.03058647 Model07\n",
+       "8  12        accuracy binary     0.6991919 5 0.03058647 Model08\n",
+       "9  13        accuracy binary     0.7038384 5 0.02844407 Model09\n",
+       "10 14        accuracy binary     0.7038384 5 0.02844407 Model10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -1194,6 +1203,7 @@
     "## get the accuracies for every fold\n",
     "accuracies <- knn_results %>% \n",
     "       filter(.metric == \"accuracy\")\n",
+    "accuracies\n",
     "\n",
     "## get the row corresponding to the highest achieved accuracy throghout the folds\n",
     "max_accuracy <- accuracies %>% filter(mean == max(mean))\n",
@@ -1216,12 +1226,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the line plot above, we find that k=6 give us the best accuracy, which is around 71.3%. We perform K-nearest neighbor model specification using k=6 on data_test to figure out the accuracy of our model."
+    "Based on the line plot above, we find that k=6 give us the best accuracy, which is around 71.3%. At the same time from the above table, we can see that by changing k to a nearby value of 4 or 7 does not change the accuracy by a large amount. Furthermore, the cost of training the model is not prohibitive at k=6. Therefore we perform K-nearest neighbor model specification using k=6 on data_test to figure out the accuracy of our model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1317,10 +1327,12 @@
     "\n",
     "* **discuss whether this is what you expected to find?**\n",
     "\n",
+    "The accuracy of 66.2% suggest that diagonosing heart disease is possible based on `age`, `thalach`, and `oldpeak`, aligning with our expectations and the histograms of the three predictors against target (healthy or diagon)\n",
     "\n",
     "\n",
     "* **discuss what impact could such findings have?**\n",
     "\n",
+    "These findings can be used by the doctor during medical check ups to warm patients that are at high risks of heart disease and may need further examinations and tests. If we are able to further improve this model and make it have a higher accuracy, it may one day be used as a substitute for diagnosing heart disease. At the same time, our findings prove that there is a correlation between heart disease and the three predictors we choose (`age`, `thalach`, and `oldpeak`), future research can be based on our findings to discover if a causation is present, and extend to prevention of heart disease at an early stage based on indications these three predictors. \n",
     "\n",
     "\n",
     "* **discuss what future questions could this lead to?**\n",
@@ -1334,10 +1346,7 @@
    "source": [
     "## **References**\n",
     "\n",
-    "**(need to fill)**\n",
-    "\n",
-    "* **At least 2 citations of literature relevant to the project (format is your choice, just be consistent across the references)**.\n",
-    "* The source of our data can be found in this link https://archive.ics.uci.edu/ml/datasets/Heart+Disease. It is part of the UCI Machine Learning Repository. \n",
+    "* Dua, D. and Graff, C. (2019). UCI Machine Learning Repository. Irvine, CA: University of California, School of Information and Computer Science. https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
     "* Textbook: Timbers, T., Campbell, T., & Lee, Melissa. (2022). Data Science: A First Introduction. Chapman and Hall/CRC. https://datasciencebook.ca/\n",
     "* Durage, P. M. (2018) Predicting a Person Diagnose a Heart Disease based on Cleveland Database. RPubs by RStudio. https://rpubs.com/praneetha/predicting_diagnosis_of_a_heart_disease-phase1"
    ]
