Edited discussion and some details

--- a/final_group_project.ipynb
+++ b/final_group_project.ipynb
@@ -1327,7 +1327,7 @@
     "\n",
     "* **discuss whether this is what you expected to find?**\n",
     "\n",
-    "The accuracy of 66.2% suggest that diagonosing heart disease is possible based on `age`, `thalach`, and `oldpeak`, aligning with our expectations and the histograms of the three predictors against target (healthy or diagon)\n",
+    "The accuracy of 66.2% suggest that diagnosing heart disease is possible based on `age`, `thalach`, and `oldpeak`, aligning with our expectations and the histograms of the three predictors against target (healthy or diagnosed).\n",
     "\n",
     "\n",
     "* **discuss what impact could such findings have?**\n",
